hphp/hack/test/typecheck/unbound_name/fun_id.php.exp
ERROR: File "fun_id.php", line 9, characters 3-11:
Unbound name: `not_found` (a global function) (Naming[2049])
ERROR: File "fun_id.php", line 9, characters 3-11:
Unbound name (typing): `not_found` (Typing[4107])
