hphp/hack/test/typecheck/unbound_name/fun_id.php
<?hh

function foo(): void {}

function test(): void {
  foo<>;

  // Should error
  not_found<>;
}
